Remove deprecated GC_TUNE option UseParNewGC from startup in sunspot_solr (#938)
# Conflicts:
#	sunspot_solr/solr/bin/solr.in.cmd